# clawguard-mcp

./: .gitignore  LAUNCHGUIDE.md  README.md  glama.json  mcpize.yaml  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
src/clawguard_mcp/: __init__.py  __main__.py  server.py
tests/: test_server.py
