[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawguard-mcp"
version = "0.3.0"
description = "MCP server for ClawGuard Shield — scan AI agent inputs for prompt injection threats"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Joerg Michno", email = "michno.jrg@gmail.com" }
]
keywords = [
    "mcp", "clawguard", "security", "prompt-injection",
    "ai-safety", "ai-agents", "llm-security", "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/joergmichno/clawguard-mcp"
Repository = "https://github.com/joergmichno/clawguard-mcp"
Documentation = "https://prompttools.co/shield"
"Bug Tracker" = "https://github.com/joergmichno/clawguard-mcp/issues"
"API Reference" = "https://prompttools.co/api/v1/"

[project.scripts]
clawguard-mcp = "clawguard_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clawguard_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
